# paper-insight

./: .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  extract_text.py  index.html
assets/: index-4RPf_LDP.js  index-7SBW4HRh.js  index-B-aj9Hde.js  index-B5TLBmf3.js  index-BBZP4U_a.js  index-BFpv_lb8.js  index-BP3ATIol.js  index-BSXsjuEP.js  index-BSvK49fX.css  index-BTBdKyHA.css  index-BcBuIL0P.js  index-Bct-eD0c.js  index-BfSmFtA7.js  index-BfmLD3A5.css  index-BqeMCViD.js  index-BsI8yTqR.js  index-Bz7ARcc0.js  index-C5fro60_.css  index-C6sWpT5R.css  index-C9XhWjmS.css  index-CUYkQQeK.js  index-CUx_Xig-.js  index-CY6evbEC.js  index-CYnOGlcI.js  index-CeWiUPqj.js  index-CgoUF4_r.js  index-Co8wXZPl.css  index-CoSli6Rf.js  index-D-lJ61Bv.css  index-D0hF_mmC.js  index-D1jGL0f2.css  index-D3kPq2UA.css  index-D5Gs5WbF.js  index-D82P2pJm.js  index-DFLUfXRG.js  index-DHU3QsXP.css  index-DLTR-JrY.js  index-DMRZyitY.css  index-DRG288j8.js  index-DViKUmZj.css  (+11 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  backfill_thumbnails.py  main.py  paper_insight.db  pyproject.toml
backend/app/: constants.py  database.py  dependencies.py  logging_config.py  main.py  middleware.py  models.py
backend/app/api/: __init__.py  health.py  papers.py  processing.py  settings.py  stats.py
backend/app/services/: arxiv_bot.py  dify_client.py  llm_brain.py  pdf_renderer.py
frontend/: .env.production  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
go/: README.md  nginx-sites-available-paper-insight.conf  nginx.conf  (+1 more)
(+25 files in other folders)
